# great-tit_genomics_ml

./: .Rprofile  .gitignore  LICENSE  README.md  config.yml  out_params.json  pyproject.toml
R/: 0_prep_data.Rmd
data/dfs/: immigrant_resident.csv  ind_10K.csv  ind_600K.csv  nb_info.csv
data/locator_metadata/: metadata
